src/objects/zqu__Quote__c.object
<CustomObject>
    <fields>
        <fullName>IT_Cod_Cli_Padre__c</fullName>
        <label>Cod_Cli_Padre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Financial_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Center</label>
        <referenceTo>ER_Financial_Center__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Recurring_Start_Date__c</fullName>
        <defaultValue>Today()+365</defaultValue>
        <label>IT_Recurring_Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Welfare_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Welfare Project</label>
        <referenceTo>IT_Welfare_Project__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>